--- a/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -4,35 +4,26 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">’phags pa chos bzhi pa
-                                        zhes bya ba theg pa chen po’i mdo</title>
-                                <title type="mainTitle" xml:lang="bo">འཕགས་པ་ཆོས་བཞི་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="mainTitle" xml:lang="en">The Noble Mahāyāna Sūtra on
+                <title type="mainTitle" xml:lang="en">The Noble Mahāyāna Sūtra on
                                         the Four Factors</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­nāma­­mahā­yāna­­sūtra</title>
-                                <!--Comment from Andreas The long title should be used as the short title as well to distinguish this sutra from Toh 250.-->
-                                <title type="otherTitle" xml:lang="zh"/>
-                                <!--<title type="mainTitle" xml:lang="en">The Sūtra on Four Precepts</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caturdharmakasūtra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa’i mdo/</title>-->
-                                <title type="shortcode" xml:lang="en">T251</title>
-                                <author role="translatorMain" xml:id="UT22084-066-009-79">Translated by Adam
+                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­nāma­­mahā­yāna­­sūtra</title>
+                <title type="mainTitle" xml:lang="bo">འཕགས་པ་ཆོས་བཞི་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">’phags pa chos bzhi pa
+                                        zhes bya ba theg pa chen po’i mdo</title>
+                <title type="shortcode" xml:lang="en">T251</title>
+                <author role="translatorMain" xml:id="UT22084-066-009-79">Translated by Adam
                                         Pearcey<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
-                                <author role="translatorEng" xml:id="UT22084-066-009-80">Adam
-                                        Pearcey</author>
-                                <editor role="projectEditor" xml:id="UT22084-066-009-81">David
-                                        Fiordalis</editor>
-                                <editor role="copyEditor" xml:id="UT22084-066-009-82">Dawn Collins</editor>
-                                <editor role="projectEditor" xml:id="UT22084-066-009-83">Andreas
-                                        Doctor</editor>
-                                <editor role="projectEditor" xml:id="UT22084-066-009-84">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" xml:id="UT22084-066-009-85">Martina
-                                        Cotter</editor>
-                        </titleStmt>
+                <author role="translatorEng" xml:id="UT22084-066-009-80">Adam Pearcey</author>
+                <editor role="projectEditor" xml:id="UT22084-066-009-81">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-066-009-82">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-066-009-83">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-066-009-84">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-066-009-85">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-066-009-274">John Canti</editor>
+            </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -183,6 +174,12 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-14T21:27:21.058Z" type="text-version" status="1.0.0" xml:id="UT22084-066-009-266">
                     <desc>First published version</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-15T07:25:44.312Z" type="text-version" status="1.0.1" xml:id="UT22084-066-009-275">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#andre" when="2023-08-23T10:52:19.337Z" type="text-version" status="1.0.2" xml:id="UT22084-066-009-276">
+                    <desc>Glossary revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -620,7 +617,7 @@ sūtra</title>) is
                                                 Wisdom Publications, 2021.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-066-009-64">
@@ -705,18 +702,13 @@ sūtra</title>) is
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-066-009-73">
+                        <gloss xml:id="UT22084-066-009-73" type="place" mode="match">
                             <term type="translationMain">Jeta Grove</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition">
-                                <p>A grove owned by Prince
-                                                  Jeta in Śrāvastī, the capital of the kingdom of
-                                                  Kośala. It was bought by Anāthapiṇḍada and became
-                                                  a monastery in which the Buddha often stayed
-                                                  during rainy seasons, and hence was a setting for
-                                                  many sūtras.</p>
+                            <note type="definition" rend="override">
+                                <p>A grove owned by Prince Jeta in Śrāvastī, the capital of the kingdom of Kośala. It was bought by Anāthapiṇḍada and became a monastery in which the Buddha often stayed during rainy seasons, and hence was a setting for many sūtras.</p>
                             </note>
                         </gloss>
                     </item>
