--- a/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -32,7 +32,7 @@
                 <sponsor xml:id="UT22084-063-010-735">马珂，王晓娟</sponsor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -173,6 +173,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-23T13:58:14.186Z" type="text-version" status="1.0.0" xml:id="UT22084-063-010-780">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-23T14:07:37.237Z" type="text-version" status="1.0.1" xml:id="UT22084-063-010-781">
+                    <desc>deleted extra milestone.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -420,7 +423,6 @@
                                                 side. Moreover, the gods Sūrya and <term ref="UT22084-063-010-535">Candra</term> also went
                                                 to the Blessed One, bowed down at his feet, and sat
                                                 to one side. </p>
-                                        <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-063-010-21"/>
                                         <lb/>
                                         <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-063-010-22"/>
                                         <p tid="25">At that point youthful Mañjuśrī rose from his
