--- a/translations/kangyur/placeholders/091-002_toh605,956-the_incantation_of_vajrabhairava.xml
+++ b/translations/kangyur/placeholders/091-002_toh605,956-the_incantation_of_vajrabhairava.xml
@@ -10,16 +10,19 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavajrabhairavadhāraṇīnāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje 'jigs byed kyi gzungs zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje 'jigs byed kyi gzungs/</title>
-                <author role="translatorMain" ref="eft:team-33"/>
-                <consultant role="dharmaMaster" ref="eft:person-199">Geshe Lozang Jamspal</consultant>
-                <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
-                <author role="translatorEng" ref="eft:person-375">David Mellins</author>
+                <author role="translatorMain" xml:id="UT22084-091-002-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-002-2">Geshe Lozang Jamspal</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-002-3">Kaia Fischer</author>
+                <author role="translatorEng" xml:id="UT22084-091-002-4">David Mellins</author>
+                <editor role="projectEditor" xml:id="UT22084-091-002-5">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-002-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-002"/>
                 <date/>
             </publicationStmt>
@@ -43,9 +46,57 @@
                     <idno source-id="O1JC114941JC12719" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-21T09:35:26.664Z" user="admin">21/07/2023 09:35:26</note>    <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:37:15.072Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:37:15.072Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:27:07.17Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:27:07.17Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:27:40.321Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:28:20.022Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T10:37:44.055Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T10:37:44.055Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-12-19T11:07:52.346Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-12-19T11:07:52.346Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:35:22.335Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-21T09:35:22.335Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-02-22T14:37:15.072Z" type="translation-status" status="4" xml:id="UT22084-091-002-7">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-02-22T14:37:15.072Z" type="text-version" status="0.0.1" xml:id="UT22084-091-002-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:27:07.17Z" type="translation-status" status="3" xml:id="UT22084-091-002-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:27:07.17Z" type="text-version" status="0.0.2" xml:id="UT22084-091-002-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:27:40.321Z" type="text-version" status="0.0.3" xml:id="UT22084-091-002-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:28:20.022Z" type="text-version" status="0.0.4" xml:id="UT22084-091-002-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T10:37:44.055Z" type="translation-status" status="2.h" xml:id="UT22084-091-002-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T10:37:44.055Z" type="text-version" status="0.0.5" xml:id="UT22084-091-002-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-19T11:07:52.346Z" type="translation-status" status="2.f" xml:id="UT22084-091-002-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-19T11:07:52.346Z" type="text-version" status="0.0.6" xml:id="UT22084-091-002-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:35:22.335Z" type="translation-status" status="2.e" xml:id="UT22084-091-002-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:35:22.335Z" type="text-version" status="0.0.7" xml:id="UT22084-091-002-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:36:11.443Z" type="text-version" status="0.0.8" xml:id="UT22084-091-002-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT22084-091-002-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:41:56.115Z" type="translation-status" status="2.d" xml:id="UT22084-091-002-21">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:41:56.115Z" type="text-version" status="0.0.10" xml:id="UT22084-091-002-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
