--- a/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
+++ b/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
@@ -13,17 +13,19 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">mañjuśrī­kumārabhūtāṣṭottara­śatakanāma dhāraṇī­mantrasahitam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jam dpal gzhon nur gyur pa'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'jam dpal gzhon nur 'gyur pa'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <author role="translatorMain" ref="eft:team-33"/>
-                <consultant role="dharmaMaster" ref="eft:person-199">Geshe Lozang Jamspal</consultant>
-                <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
-                <author role="translatorEng" ref="eft:person-375">David Mellins</author>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-091-036-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-036-2">Geshe Lozang Jamspal</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-036-3">Kaia Fischer</author>
+                <author role="translatorEng" xml:id="UT22084-091-036-4">David Mellins</author>
+                <editor role="projectEditor" xml:id="UT22084-091-036-5">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-036-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-036"/>
                 <date/>
             </publicationStmt>
@@ -47,23 +49,63 @@
                     <idno source-id="O1JC114941JC12641" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-21T09:36:45.007Z" user="admin">21/07/2023 09:36:45</note>
-                <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:30:22.538Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:30:48.462Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-19T12:31:25.969Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T09:30:03.088Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T09:30:03.088Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-09T08:22:37.036Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:36:40.706Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-21T09:36:40.706Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-02-22T14:37:54.25Z" type="translation-status" status="4" xml:id="UT22084-091-036-7">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-02-22T14:37:54.25Z" type="text-version" status="0.0.1" xml:id="UT22084-091-036-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:29:09.08Z" type="translation-status" status="3" xml:id="UT22084-091-036-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:29:09.08Z" type="text-version" status="0.0.2" xml:id="UT22084-091-036-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:30:22.538Z" type="text-version" status="0.0.3" xml:id="UT22084-091-036-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:30:48.462Z" type="text-version" status="0.0.4" xml:id="UT22084-091-036-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:31:25.969Z" type="text-version" status="0.0.5" xml:id="UT22084-091-036-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T09:30:03.088Z" type="translation-status" status="2.h" xml:id="UT22084-091-036-14">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T09:30:03.088Z" type="text-version" status="0.0.6" xml:id="UT22084-091-036-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-09T08:22:08.744Z" type="translation-status" status="2.f" xml:id="UT22084-091-036-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-09T08:22:08.744Z" type="text-version" status="0.0.7" xml:id="UT22084-091-036-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-09T08:22:37.036Z" type="text-version" status="0.0.8" xml:id="UT22084-091-036-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:36:40.706Z" type="translation-status" status="2.e" xml:id="UT22084-091-036-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:36:40.706Z" type="text-version" status="0.0.9" xml:id="UT22084-091-036-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:37:13.03Z" type="text-version" status="0.0.10" xml:id="UT22084-091-036-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-091-036-22">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:42:57.822Z" type="translation-status" status="2.d" xml:id="UT22084-091-036-23">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:42:57.822Z" type="text-version" status="0.0.12" xml:id="UT22084-091-036-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
