--- a/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
@@ -9,17 +9,19 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jam dpal gyi mtshan brgya rtsa brgyad pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamañjuśrīnāmāṣṭaśatakam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jam dpal gyi mtshan brgya rtsa brgyad pa zhes bya ba/</title>
-                <author role="translatorMain" ref="eft:team-33"/>
-                <consultant role="dharmaMaster" ref="eft:person-199">Geshe Lozang Jamspal</consultant>
-                <author role="translatorEng" ref="eft:person-375">David Mellins</author>
-                <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-091-039-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-039-2">Geshe Lozang Jamspal</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-039-3">David Mellins</author>
+                <author role="translatorEng" xml:id="UT22084-091-039-4">Kaia Fischer</author>
+                <editor role="projectEditor" xml:id="UT22084-091-039-5">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-039-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-039"/>
                 <date/>
             </publicationStmt>
@@ -34,24 +36,66 @@
                     <idno source-id="O1JC114941JC12376" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-21T09:37:42.424Z" user="admin">21/07/2023 09:37:42</note>
-                <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:32:57.789Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:33:32.316Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T09:31:30.102Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T09:31:30.102Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-09T08:23:56.829Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-09T08:23:56.829Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T08:24:25.841Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-01-10T08:59:51.859Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-10T08:59:51.859Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:37:38.133Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-21T09:37:38.133Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-02-22T14:38:29.103Z" type="translation-status" status="4" xml:id="UT22084-091-039-7">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-02-22T14:38:29.103Z" type="text-version" status="0.0.1" xml:id="UT22084-091-039-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:32:27.137Z" type="translation-status" status="3" xml:id="UT22084-091-039-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:32:27.137Z" type="text-version" status="0.0.2" xml:id="UT22084-091-039-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:32:57.789Z" type="text-version" status="0.0.3" xml:id="UT22084-091-039-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T12:33:32.316Z" type="text-version" status="0.0.4" xml:id="UT22084-091-039-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T09:31:30.102Z" type="translation-status" status="2.h" xml:id="UT22084-091-039-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T09:31:30.102Z" type="text-version" status="0.0.5" xml:id="UT22084-091-039-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-09T08:23:56.829Z" type="translation-status" status="2.g" xml:id="UT22084-091-039-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-09T08:23:56.829Z" type="text-version" status="0.0.6" xml:id="UT22084-091-039-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-09T08:24:25.841Z" type="text-version" status="0.0.7" xml:id="UT22084-091-039-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-10T08:59:51.859Z" type="translation-status" status="2.f" xml:id="UT22084-091-039-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-10T08:59:51.859Z" type="text-version" status="0.0.8" xml:id="UT22084-091-039-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:37:38.133Z" type="translation-status" status="2.e" xml:id="UT22084-091-039-20">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:37:38.133Z" type="text-version" status="0.0.9" xml:id="UT22084-091-039-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:38:35.516Z" type="text-version" status="0.0.10" xml:id="UT22084-091-039-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-091-039-23">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:44:03.072Z" type="translation-status" status="2.d" xml:id="UT22084-091-039-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:44:03.072Z" type="text-version" status="0.0.12" xml:id="UT22084-091-039-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
