--- a/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
@@ -7,20 +7,22 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra of the God</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">devatāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha'i mdo/</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
-                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <author role="translatorMain" xml:id="UT22084-072-029-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-072-029-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-029-3">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-072-029-4">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="projectManager" xml:id="UT22084-072-029-5">Rev. Dr. Ani Kunga Chodron</consultant>
+                <editor role="associateEditor" xml:id="UT22084-072-029-6">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-029-7">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-029-32">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2019</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-072-029"/>
                 <date/>
             </publicationStmt>
@@ -35,25 +37,69 @@
                     <idno source-id="O1JC114941JC12007" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-17T09:01:43.384Z" user="admin">17/07/2023 09:01:43</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-30T13:38:19.316Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T15:33:03.742Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-06T15:33:03.742Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-06T15:33:34.089Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-21T10:27:59.595Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-21T10:27:59.595Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-05-02T14:29:00.372Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-05-02T14:29:00.372Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-05-02T14:29:34.375Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-06-01T13:09:19.928Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-01T13:09:19.928Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.c" date-time="2023-07-17T09:01:39.143Z" user="line-tofte">2.c</note>
-                <note type="updated" update="text-version" value="0.0.10" date-time="2023-07-17T09:01:39.143Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-072-029-8">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T13:37:06.887Z" type="translation-status" status="2.h" xml:id="UT22084-072-029-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T13:37:06.887Z" type="text-version" status="0.0.2" xml:id="UT22084-072-029-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T13:38:19.316Z" type="text-version" status="0.0.3" xml:id="UT22084-072-029-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-06T15:33:03.742Z" type="translation-status" status="2.g" xml:id="UT22084-072-029-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-06T15:33:03.742Z" type="text-version" status="0.0.4" xml:id="UT22084-072-029-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-06T15:33:34.089Z" type="text-version" status="0.0.5" xml:id="UT22084-072-029-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-21T10:27:59.595Z" type="translation-status" status="2.f" xml:id="UT22084-072-029-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-21T10:27:59.595Z" type="text-version" status="0.0.6" xml:id="UT22084-072-029-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:29:00.372Z" type="translation-status" status="2.e" xml:id="UT22084-072-029-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:29:00.372Z" type="text-version" status="0.0.7" xml:id="UT22084-072-029-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:29:34.375Z" type="text-version" status="0.0.8" xml:id="UT22084-072-029-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T13:09:19.928Z" type="translation-status" status="2.d" xml:id="UT22084-072-029-20">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T13:09:19.928Z" type="text-version" status="0.0.9" xml:id="UT22084-072-029-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T09:01:39.143Z" type="translation-status" status="2.c" xml:id="UT22084-072-029-22">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T09:01:39.143Z" type="text-version" status="0.0.10" xml:id="UT22084-072-029-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-072-029-24">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-21T12:56:48.54Z" type="text-version" status="0.0.12" xml:id="UT22084-072-029-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:51:27.253Z" type="translation-status" status="2.b" xml:id="UT22084-072-029-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:51:27.253Z" type="text-version" status="0.0.13" xml:id="UT22084-072-029-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
