--- a/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
@@ -17,12 +17,12 @@
                 <editor role="projectEditor" xml:id="UT22084-072-029-32">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-029"/>
                 <date/>
             </publicationStmt>
@@ -97,6 +97,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-24T07:51:27.253Z" type="text-version" status="0.0.13" xml:id="UT22084-072-029-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:53:29.163Z" type="translation-status" status="2.a" xml:id="UT22084-072-029-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T07:53:29.163Z" type="text-version" status="0.0.14" xml:id="UT22084-072-029-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
