--- a/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -7,18 +7,20 @@
                 <title type="mainTitle" xml:lang="en">The Smaller Sūtra of the God</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">alpadevatāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha'i mdo nyung ngu /</title>
-                <author role="translatorMain" ref="eft:team-50"/>
-                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
-                <editor role="proofreader" ref="eft:person-359">Daniela Espíndola</editor>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
-                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <author role="translatorMain" xml:id="UT22084-072-030-1">Pema Yeshé Dé Translation Group</author>
+                <consultant role="projectManager" xml:id="UT22084-072-030-2">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-030-3">Giuliano Francisco Proença</author>
+                <editor role="proofreader" xml:id="UT22084-072-030-4">Daniela Espíndola</editor>
+                <editor role="associateEditor" xml:id="UT22084-072-030-5">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-030-6">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-030-33">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2021</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-030"/>
                 <date/>
             </publicationStmt>
@@ -33,28 +35,78 @@
                     <idno source-id="O1JC114941JC12009" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-17T11:08:00.686Z" user="admin">17/07/2023 11:08:00</note>
-                <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:27:11.559Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:27:30.726Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:28:22.317Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:57:13.438Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:57:13.438Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-06T13:47:13.661Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-21T10:21:28.263Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-21T10:21:28.263Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-05-02T14:29:58.953Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-05-02T14:29:58.953Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-02T14:30:31.61Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-06-01T12:58:53.128Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.0.11" date-time="2023-06-01T12:58:53.128Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.c" date-time="2023-07-17T11:07:56.345Z" user="line-tofte">2.c</note>
-                <note type="updated" update="text-version" value="0.0.12" date-time="2023-07-17T11:07:56.345Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-03-10T08:26:53.902Z" type="translation-status" status="3" xml:id="UT22084-072-030-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-10T08:26:53.902Z" type="text-version" status="0.0.1" xml:id="UT22084-072-030-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-10T08:27:11.559Z" type="text-version" status="0.0.2" xml:id="UT22084-072-030-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-10T08:27:30.726Z" type="text-version" status="0.0.3" xml:id="UT22084-072-030-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-10T08:28:22.317Z" type="text-version" status="0.0.4" xml:id="UT22084-072-030-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-01T12:57:13.438Z" type="translation-status" status="2.h" xml:id="UT22084-072-030-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-01T12:57:13.438Z" type="text-version" status="0.0.5" xml:id="UT22084-072-030-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-06T13:46:24.047Z" type="translation-status" status="2.g" xml:id="UT22084-072-030-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-06T13:46:24.047Z" type="text-version" status="0.0.6" xml:id="UT22084-072-030-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-06T13:47:13.661Z" type="text-version" status="0.0.7" xml:id="UT22084-072-030-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-21T10:21:28.263Z" type="translation-status" status="2.f" xml:id="UT22084-072-030-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-21T10:21:28.263Z" type="text-version" status="0.0.8" xml:id="UT22084-072-030-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:29:58.953Z" type="translation-status" status="2.e" xml:id="UT22084-072-030-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:29:58.953Z" type="text-version" status="0.0.9" xml:id="UT22084-072-030-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:30:31.61Z" type="text-version" status="0.0.10" xml:id="UT22084-072-030-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T12:58:53.128Z" type="translation-status" status="2.d" xml:id="UT22084-072-030-22">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T12:58:53.128Z" type="text-version" status="0.0.11" xml:id="UT22084-072-030-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T11:07:56.345Z" type="translation-status" status="2.c" xml:id="UT22084-072-030-24">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T11:07:56.345Z" type="text-version" status="0.0.12" xml:id="UT22084-072-030-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.13" xml:id="UT22084-072-030-26">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-21T12:57:37.3Z" type="text-version" status="0.0.14" xml:id="UT22084-072-030-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T08:01:02.858Z" type="translation-status" status="2.a" xml:id="UT22084-072-030-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T08:01:02.858Z" type="text-version" status="0.0.15" xml:id="UT22084-072-030-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
