--- a/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -32,7 +32,7 @@
                 <sponsor xml:id="UT22084-063-010-735">马珂，王晓娟</sponsor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -176,6 +176,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-23T14:07:37.237Z" type="text-version" status="1.0.1" xml:id="UT22084-063-010-781">
                     <desc>deleted extra milestone.</desc>
+                </change>
+                <change who="#andre" when="2023-08-24T17:26:34.211Z" type="text-version" status="1.0.2" xml:id="UT22084-063-010-782">
+                    <desc>glossary revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -377,7 +380,8 @@
                                 <head type="titleMain" tid="17">Discussions of Thus-Gone Ones</head>
                                 <div type="section" xml:id="UT22084-063-010-section-1">
                                         <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-063-010-18"/>
-                                        <p tid="21">[B1] <ref cRef="F.226.b" type="folio" xml:id="UT22084-063-010-647"/> Homage to all
+                                        <p tid="21">
+                        <ref cRef="B1" type="bampo"/> <ref cRef="F.226.b" type="folio" xml:id="UT22084-063-010-647"/> Homage to all
                                                 buddhas and bodhisattvas!</p>
                                         <lb/>
                                         <p tid="23">Thus did I hear at one time. The Blessed One was
@@ -1380,7 +1384,8 @@
                                                 <l>“There are those who have no faith</l>
                                                 <l>And do not feel delight </l>
                                                 <l>Even after they hear these teachings.</l>
-                                                <l>You still act to encourage them.” [B2]</l>
+                                                <l>You still act to encourage them.” <ref cRef="B2" type="bampo"/>
+                        </l>
                                         </lg>
                                         <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-063-010-140"/>
                                         <p tid="137">King Prasenajit of Kośala went up to the
@@ -2586,7 +2591,8 @@
                                                 way all phenomena are awakening, yet all phenomena
                                                 are also not<note place="end" xml:id="UT22084-063-010-264"> Omitting <foreign xml:lang="Bo-Ltn" type="term">ma</foreign> based
                                                   on K<hi rend="subscript">Y</hi>, J, K, N, C, and
-                                                  H.</note> awakening. [B3]</p>
+                                                        H.</note> awakening. <ref cRef="B3" type="bampo"/>
+                    </p>
                                         <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-063-010-266"/>
                                         <p tid="251">At this point the householders Susārthavāha,
                                                 Pure Conduct, Friend of the Nāgas, Without Fixation,
@@ -4085,7 +4091,7 @@
                                                 Banarsidass, 2005.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-063-010-485">
@@ -4164,17 +4170,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-063-010-491">
+                        <gloss xml:id="UT22084-063-010-491" type="term" mode="match">
                             <term type="translationMain">seven precious materials</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">saptaratna</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rin po che sna bdun</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རིན་པོ་ཆེ་སྣ་བདུན།</term>
-                            <note type="definition">
-                                <p>The list of seven precious
-                                                  materials vary. Either they are gold, silver,
-                                                  turquoise, coral, pearl, emerald, and sapphire; or
-                                                  else they are ruby, sapphire, beryl, emerald,
-                                                  diamond, pearls, and coral.</p>
+                            <note type="definition" rend="override">
+                                <p>The list of seven precious materials vary. Either they are gold, silver, turquoise, coral, pearl, emerald, and sapphire; or else they are ruby, sapphire, beryl, emerald, diamond, pearls, and coral.</p>
                             </note>
                         </gloss>
                     </item>
@@ -4195,17 +4197,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-063-010-494">
+                        <gloss xml:id="UT22084-063-010-494" type="term" mode="match">
                             <term type="translationMain">limit of reality</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhūtakoṭi </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhūtakoṭi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">yang dag pa’i mtha’</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡང་དག་པའི་མཐའ།</term>
-                            <note type="definition">
-                                <p>This term has three
-                                                  meanings: (1) the ultimate nature,
-                                                  (2) the experience of the ultimate nature, and (3)
-                                                  the quiescent state of a worthy one to be avoided
-                                                  by bodhisattvas. </p>
+                            <note type="definition" rend="override">
+                                <p>This term has three meanings: (1) the ultimate nature, (2) the experience of the ultimate nature, and (3) the quiescent state of a worthy one to be avoided by bodhisattvas. </p>
                             </note>
                         </gloss>
                     </item>
@@ -4548,15 +4546,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-063-010-527">
+                        <gloss xml:id="UT22084-063-010-527" type="person" mode="match">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition">
-                                <p>A wealthy merchant of
-                                                  Śrāvastī and benefactor of the Buddha, he donated
-                                                  the Jeta Grove to the Buddha.</p>
+                            <note type="definition" rend="override">
+                                <p>A wealthy merchant of Śrāvastī and benefactor of the Buddha, he donated the Jeta Grove to the Buddha.</p>
                             </note>
                         </gloss>
                     </item>
@@ -4605,27 +4601,11 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-063-010-532">
+                        <gloss xml:id="UT22084-063-010-532" type="person" mode="match">
                             <term type="translationMain">Bhadrapāla</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhadrapāla</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bzang skyong</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཟང་སྐྱོང་།</term>
-                            <note type="definition">
-                                <p>Head of the “sixteen
-                                                  excellent men” (<foreign xml:lang="Sa-Ltn" type="term">ṣoḍaśasat­puruṣa</foreign>), a group
-                                                  of householder bodhisattvas present in the
-                                                  audience of many sūtras. He appears prominently in
-                                                  certain sūtras such as <title xml:lang="en">The
-                                                  Samādhi of the Presence of the
-                                                  Buddhas</title> (<title xml:lang="Sa-Ltn">Pratyutpanna­buddhasaṃmukhāvasthita­samādhi­sūtra</title>,
-                                                  <ref rend="pending" target="http://read.84000.co/translation/toh133.html">Toh 133</ref>) and is perhaps also the merchant
-                                                  of the same name who is the principal interlocutor
-                                                  in <title xml:lang="en">
-                                        <ref target="https://read.84000.co/translation/toh83.html">The Questions of Bhadrapāla the
-                                                  Merchant</ref>
-                                    </title> (<title xml:lang="Sa-Ltn">Bhadrapālaśreṣṭhi­paripṛcchā</title>, Toh
-                                                  83).</p>
-                            </note>
                         </gloss>
                     </item>
                                         <item>
@@ -4640,27 +4620,11 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-063-010-534">
+                        <gloss xml:id="UT22084-063-010-534" type="person" mode="match">
                             <term type="translationMain">Brahmā</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">brahmā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">tshangs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚངས་པ།</term>
-                            <note type="definition">
-                                <p>A high-ranking deity
-                                                  presiding over a divine world where other beings
-                                                  consider him the creator; he is also considered to
-                                                  be the lord of the Sahā world (our universe).
-                                                  Though not considered a creator god in Buddhism,
-                                                  Brahmā occupies an important place as one of two
-                                                  gods (the other being Indra/Śakra) said to have
-                                                  first exhorted the Buddha Śākyamuni to teach the
-                                                  Dharma. The particular heavens found in the form
-                                                  realm over which Brahmā rules are often some of
-                                                  the most sought-after realms of higher rebirth in
-                                                  Buddhist literature. Since there are many
-                                                  universes or world systems, there are also
-                                                  multiple Brahmās presiding over them.</p>
-                            </note>
                         </gloss>
                     </item>
                                         <item>
@@ -4882,13 +4846,12 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-063-010-554">
+                        <gloss xml:id="UT22084-063-010-554" type="person" mode="match">
                             <term type="translationMain">Increaser</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">phel byed</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཕེལ་བྱེད།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">'phel byed</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">འཕེལ་བྱེད།</term>
                             <note type="definition">
-                                <p>A householder in this
-                                                  sūtra.</p>
+                                <p>A householder in this sūtra.</p>
                             </note>
                         </gloss>
                     </item>
@@ -5044,13 +5007,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-063-010-567">
+                        <gloss xml:id="UT22084-063-010-567" type="person" mode="match">
                             <term type="translationMain">Mahāmaudgalyāyana</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">mahā­maudgalyāyana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">maud gal gyi bu chen po</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཽད་གལ་གྱི་བུ་ཆེན་པོ།</term>
-                            <note type="definition">
-                                    <p>One of the principal hearer disciples of the Buddha, paired with Śāriputra. He was renowned for his miraculous powers. His family clan was descended from Mudgala, hence his name Maudgalyā­yana, “the son of Mudgala’s descendants.” Respectfully referred to as Mahā­maudgalyā­yana.</p>
+                            <note type="definition" rend="override">
+                                <p>One of the principal hearer disciples of the Buddha, paired with Śāriputra. He was renowned for his miraculous powers. His family clan was descended from Mudgala, hence his name Maudgalyā­yana, “the son of Mudgala’s descendants.” Respectfully referred to as Mahā­maudgalyā­yana.</p>
                             </note>
                         </gloss>
                     </item>
