--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -9,8 +9,8 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryatathāgatācintyaguhya­nirdeśanāma­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatācintyaguhyanirdeśa</title>
-                <title type="otherTitle" xml:lang="zh">《如來不可思議秘密經》（大正藏：《大寶積經密迹金剛力士會第三》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《如來不可思議秘密經》（大正藏：《大寶積經密迹金剛力士會第三》）</title>
                 <author role="translatorMain" xml:id="UT22084-039-003-1">Dharmachakra Translation Committee</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-039-003-2">Chökyi Nyima Rinpoche</consultant>
                 <author role="translatorEng" xml:id="UT22084-039-003-3">Timothy Hinkle</author>
@@ -18,15 +18,16 @@
                 <consultant role="advisor" xml:id="UT22084-039-003-5">Ulrich Pagel</consultant>
                 <consultant role="projectManager" xml:id="UT22084-039-003-6">Andreas Doctor</consultant>
                 <editor role="projectEditor" xml:id="UT22084-039-003-7">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-039-003-29">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-039-003-8">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-039-003"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-07T09:33:34.428Z" type="text-version" status="0.0.9" xml:id="UT22084-039-003-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-07T09:34:09.525Z" type="text-version" status="0.0.10" xml:id="UT22084-039-003-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-25T07:35:26.782Z" type="translation-status" status="2.c" xml:id="UT22084-039-003-31">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-25T07:35:26.782Z" type="text-version" status="0.0.11" xml:id="UT22084-039-003-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
