--- a/translations/kangyur/translations/076-008_toh354-teaching_the_causes_and_results_of_good_and_ill.xml
+++ b/translations/kangyur/translations/076-008_toh354-teaching_the_causes_and_results_of_good_and_ill.xml
@@ -27,7 +27,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-076-008-343">Andre Rodrigues</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -156,6 +156,9 @@
                 </change>
                 <change who="#konchog" when="2023-08-23T14:10:53.349Z" type="text-version" status="1.0.1" xml:id="UT22084-076-008-349">
                     <desc>Many small fixes throughout, especially adjustments in 1.19-1.21 for clarity.</desc>
+                </change>
+                <change who="#andre" when="2023-08-26T09:34:37.774Z" type="text-version" status="1.0.2" xml:id="UT22084-076-008-350">
+                    <desc>Glossary integration revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
