--- a/translations/kangyur/translations/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
+++ b/translations/kangyur/translations/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-076-009-343">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -137,6 +137,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-22T18:34:10.263Z" type="text-version" status="1.0.0" xml:id="UT22084-076-009-347">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2023-08-26T09:38:55.654Z" type="text-version" status="1.0.1" xml:id="UT22084-076-009-348">
+                    <desc>Glossary integration revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
